--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
 .wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.chart__container {
+    margin-top: 100px;
+    position: relative;
+    color: #2c2c2c;
 }
